<resources>
    <string name="app_name">Notes</string>
    <string name="defaultNote">Type hier uw notitie...</string>
    <string name="notesStorageLabel">notesStorage</string>
    <string name="modified">Nu</string>
    <string name="popupArchived">Notitie is gearchiveerd</string>
    <string name="popupEmpty">Notitie is nog leeg</string>
    <string name="popupCopied">De notitie is gekopiëerd naar het klembord</string>
    <string name="copyLabel">Notitie</string>

    <string name="prefix_today">Vandaag, om </string>
    <string name="prefix_yesterday">Gisteren, om </string>
    <string name="prefix_older">Langer geleden, op </string>

    <!-- General messages, shown in the GUI -->
    <string name="info_no_notes">Er zijn geen notities</string>

    <!-- Menu items -->
    <string name="action_about">Over de app</string>
    <string name="action_archive">Archiveren</string>
    <string name="action_copy">Kopiëren</string>
    <string name="action_delete">Verwijderen...</string>
    <string name="action_new">Nieuwe notitie</string>
    <string name="action_send">Versturen</string>
    <string name="action_settings">Instellingen</string>
    <string name="action_quit">Afsluiten</string>
    <string name="title_activity_settings">Instellingen</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">Algemeen</string>

    <string name="pref_title_onstartup_load_last_note">Vervolg notitie bij opstarten</string>
    <string name="pref_description_onstartup_load_last_note">Open de recentst bewerkte notitie bij het opnenen van de app.</string>
</resources>
