<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <item
        android:id="@+id/action_archive"
        android:icon="@drawable/ic_action_archive"
        android:title="@string/action_archive"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_copy"
        android:icon="@drawable/ic_action_copy"
        android:title="@string/action_copy"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_action_delete"
        android:title="@string/action_delete"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_send"
        android:icon="@drawable/ic_action_send"
        android:title="@string/action_send"
        app:showAsAction="never"/>

    <item android:id="@+id/action_quit"
        android:icon="@drawable/ic_action_quit"
        android:title="@string/action_quit"
        app:showAsAction="never"/>

    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/action_settings"
        android:icon="@drawable/ic_action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

    <item android:id="@+id/action_about"
        android:icon="@drawable/ic_action_about"
        android:title="@string/action_about"
        app:showAsAction="never"/>
</menu>